# scribe

./: .mcp.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.hone/: hone.yaml  notebook.md  state.json
.hone/turns/: 2026-04-21T205440Z.md  2026-04-21T210717Z.md  2026-04-22T022205Z.md  2026-04-22T033156Z.md  2026-04-22T052233Z.md  2026-04-22T060709Z.md  2026-04-22T062158Z.md  2026-04-22T063706Z.md  2026-04-22T065224Z.md
.ike/: ike.json
.ike/completed/: TASK-0001 - tag-v0-0-1-pin-mcp-json-uvx-spec-to-the-tag.md  TASK-0003 - add-callers-seen-field-to-scribe-read-output.md  TASK-0004 - add-changelog-md.md
.ike/tasks/: TASK-0001 - tag-v0-0-1-pin-mcp-json-uvx-spec-to-the-tag.md  TASK-0002 - pypi-publish-scribe.md  TASK-0003 - add-callers-seen-field-to-scribe-read-output.md  TASK-0004 - add-changelog-md.md  TASK-0005 - implement-scribe-v0-1-0-technical-writer-api-adr-0.md
.lighthouse/: config.yaml
.lighthouse/log/: 2026-04-21.jsonl
.lighthouse/north_stars/: ns_c5a90a5cc690.yaml
.scribe/: card.md  updates.jsonl
.visionlog/: config.yaml  vision.md
.visionlog/adr/: ADR-001-adr-001-scribe-is-data-layer-only-not-a-synthesizi.md  ADR-002-adr-002-team-roster-is-a-static-shipped-yaml-not-r.md  ADR-003-adr-003-card-format-is-yaml-frontmatter-markdown-b.md  ADR-004-adr-004-scribe-is-a-technical-writer-not-a-data-la.md
.visionlog/guardrails/: GUARD-001-no-llm-synthesis-inside-scribe.md  GUARD-002-one-scribe-per-repo-never-cross-repo.md  GUARD-003-every-update-must-be-logged-even-when-card-md-is-n.md
tests/: test_smoke.py
(+8 files in other folders)
