[project]
name = "scribe"
version = "0.0.1"
description = "Per-repo documentarian MCP. Maintains a repo's authoritative self-description as other tools change it."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
scribe = "scribe.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribe"]

[tool.hatch.build.targets.wheel.force-include]
"src/scribe/team.yaml" = "scribe/team.yaml"
