[project]
name = "scribe"
version = "0.1.2"
description = "Per-repo documentarian MCP. Maintains a repo's authoritative self-description as other tools change it."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
scribe = "scribe.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
